--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -8,6 +8,6 @@ sky:
     password: 123456
   alioss:
     endpoint: oss-cn-beijing.aliyuncs.com
-    access-key-id: LTAI5tFCea6FbJGj2jERVVem
-    access-key-secret: oDfjvEDKnlUhpvrqiWFYyv6KxYOzZz
+    access-key-id: 
+    access-key-secret: 
     bucket-name: sky-hhzalh
