--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -8,6 +8,11 @@ sky:
     password: 123456
   alioss:
     endpoint: oss-cn-beijing.aliyuncs.com
-    access-key-id: 
-    access-key-secret: 
+    access-key-id:
+    access-key-secret:
     bucket-name: sky-hhzalh
+  redis:
+    host: localhost
+    port: 6379
+    password:
+    database: 10
